# Learn-LLVM-Core-Libraries-Second-Edition

./: README.md
Chapter 2/: ch2_64bit_div.c
Chapter 3/: main.c  sum.c
Chapter 5/: ch5_llvm_exception.cpp  in.txt
Chapter 6/: CMakeLists.txt  ch6_read_ir  ch6_read_ir.cpp
Chapter 6/test/: CMakeLists.txt  input.bc  input.ll  lit.cfg.py  lit.site.cfg.py.in  wronginput.ll
